# Micyou-legacy

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_zh-cn.md  CONTRIBUTING_zh-tw.md  LICENSE  README.md  README_zh-cn.md  README_zh-tw.md  analysis_results.md  gradle.properties  release.keystore  release.keystore.base64  修复文档.md
.github/workflows/: development.yml  pre-release.yml  release.yml
composeApp/: build.gradle.kts
composeApp/resources/common/alsa/: micyou-pipewire.conf
composeApp/scripts/no-jre/: {{APP_NAME}}.sh
composeApp/src/androidMain/kotlin/com/lanrhyme/micyou/: MainActivity.kt  (+2 more)
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/composeResources/values-ca/: strings.xml
composeApp/src/commonMain/composeResources/values-zh/: strings.xml
composeApp/src/commonMain/composeResources/values-zh-rHK/: strings.xml
composeApp/src/commonMain/composeResources/values-zh-rSS/: strings.xml
composeApp/src/commonMain/composeResources/values-zh-rTW/: strings.xml
composeApp/src/main/: AndroidManifest.xml
composeApp/src/main/res/values/: strings.xml
composeApp/src/main/res/values-ca/: strings.xml
composeApp/src/main/res/values-zh/: strings.xml
composeApp/src/main/res/values-zh-rHD/: strings.xml
composeApp/src/main/res/values-zh-rHK/: strings.xml
composeApp/src/main/res/values-zh-rTW/: strings.xml
tauri-app/: .gitignore  AGENTS.md  Cargo.toml  generate_colors.js  out.js  package-lock.json  package.json  tailwind.config.js
tauri-app/crates/micyou-audio/: Cargo.toml
tauri-app/crates/micyou-audio/src/: dsp.rs  engine.rs  lib.rs
tauri-app/crates/micyou-protocol/: Cargo.toml  build.rs
tauri-app/crates/micyou-protocol/proto/: network.proto
tauri-app/crates/micyou-protocol/src/: lib.rs
tauri-app/src/: App.vue  main.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: adb_manager.rs  audio_engine.rs  blackhole.rs  dsp.rs  jitter_buffer.rs  lib.rs  main.rs  network.rs  protocol.rs  tcp_server.rs  udp_server.rs  vbcable.rs  web_server.rs
tauri-app/src-tauri/src/commands/: about.rs
tauri-app/src/assets/: index.css
tauri-app/src/components/: AudioChainDialog.vue  AudioRing.vue  ContributorsDialog.vue  CustomBackground.vue  EqualizerPanel.vue  LicensesDialog.vue  PopupWindow.vue  SettingsDialog.vue  SponsorsDialog.vue
tauri-app/src/features/audio/components/: AudioChainDialog.vue  AudioRing.vue  EqualizerPanel.vue  MonitoringPanel.vue
tauri-app/src/features/audio/composables/: useAudio.ts
tauri-app/src/features/connection/components/: ConnectionErrorDialog.vue  IpPopup.vue  QrCodeDialog.vue
tauri-app/src/features/connection/composables/: useServer.ts
tauri-app/src/features/connection/utils/: connectionError.ts
tauri-app/src/features/onboarding/components/: OnboardingWizard.vue
tauri-app/src/features/pocket/components/: PocketLayout.vue
tauri-app/src/features/settings/components/: ContributorsDialog.vue  LicensesDialog.vue  SettingsDialog.vue  SponsorsDialog.vue
tauri-app/src/features/theme/components/: CustomColorPicker.vue  CustomCssDialog.vue  ThemeSelector.vue
tauri-app/src/features/theme/composables/: useTheme.ts
tauri-app/src/locales/: en.json  zh.json
tauri-app/src/shared/assets/: index.css
tauri-app/src/shared/components/: CloseConfirmDialog.vue  CustomBackground.vue  PopupWindow.vue  UdpWarningDialog.vue
tauri-app/src/shared/components/ui/badge/: Badge.vue
tauri-app/src/shared/components/ui/button/: Button.vue
tauri-app/src/shared/components/ui/card/: Card.vue  CardContent.vue  CardDescription.vue  CardFooter.vue  CardHeader.vue  CardTitle.vue
tauri-app/src/shared/components/ui/dialog/: DialogContent.vue  DialogDescription.vue  DialogFooter.vue  DialogHeader.vue  DialogScrollContent.vue  DialogTitle.vue
tauri-app/src/shared/components/ui/input/: Input.vue
tauri-app/src/shared/components/ui/label/: Label.vue
tauri-app/src/shared/components/ui/progress/: Progress.vue
tauri-app/src/shared/components/ui/select/: SelectContent.vue  SelectGroup.vue  SelectItem.vue  SelectLabel.vue  SelectScrollDownButton.vue  SelectScrollUpButton.vue  SelectSeparator.vue  SelectTrigger.vue
tauri-app/src/shared/components/ui/separator/: Separator.vue
tauri-app/src/shared/components/ui/slider/: Slider.vue
tauri-app/src/shared/components/ui/switch/: Switch.vue
tauri-app/src/shared/composables/: useTray.ts  useWindow.ts
tauri-app/src/shared/locales/: en.json  zh.json
其他/: 签名信息
(+81 files in other folders)
