[package]
name = "micyou"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.14.3"
bytes = "1.11.1"
tokio = { version = "1.52.3", features = ["full"] }
mdns-sd = "0.20.0"
hostname = "0.4.2"
local-ip-address = "0.6.13"
cpal = "0.15.3"
rubato = "3.0.0"
rustfft = "6.4.1"
audiopus = "0.2.0"
ringbuf = "0.3.3"
tokio-util = "0.7.18"
nnnoiseless = "0.5.2"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
reqwest = { version = "0.13.4", features = ["json"] }
md-5 = "0.11.0"
tauri-plugin-log = "2.8.0"
tauri-plugin-dialog = "2.7.1"
socket2 = "0.6.4"
log = "0.4.32"
tauri-plugin-notification = "2.3.3"
zip = "2"
axum = { version = "0.8", features = ["ws"] }
rcgen = "0.13"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2"] }
winreg = "0.52"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

