[package]
name = "micyou-app"
version = "2.0.0"
description = "MicYou - Turn your Android device into a high-quality PC microphone"
authors.workspace = true
edition.workspace = true

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["vbcable", "adb", "web-server"]
vbcable = ["dep:zip"]
adb = []
web-server = ["dep:axum", "dep:rcgen", "dep:rustls", "dep:tokio-rustls", "dep:rustls-pemfile"]

[dependencies]
# Workspace crates
micyou-protocol = { path = "../crates/micyou-protocol" }
micyou-audio = { path = "../crates/micyou-audio", features = ["dsp"] }

# Tauri
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-log = "2.8.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2.3.3"

# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
log = "0.4.32"
bytes = "1.11.1"
prost = "0.14.3"

# Audio device enumeration
cpal = "0.15.3"

# Networking
mdns-sd = "0.20.0"
hostname = "0.4.2"
local-ip-address = "0.6.13"
socket2 = "0.6.4"

# Sponsor/API
reqwest = { version = "0.13.4", features = ["json"] }
md-5 = "0.11.0"

# Platform: Windows VB-Cable (optional)
zip = { version = "2", optional = true }

# Web server (optional)
axum = { version = "0.8", features = ["ws"], optional = true }
rcgen = { version = "0.13", optional = true }
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2"] }
winreg = "0.52"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
window-vibrancy = "0.7"
